    TACO/TANGO/EPICS devices.

  - Breakpoints now work as expected in the daemon debugger.

* GUI

  - Improved compatibility with Qt 5.

  - Created a nicer 'About' dialog and removed the 'About Qt' dialog.

  - The scan plot now tries harder to select a proper X axis by determining
    the first changing device.

* Commands

  - The 'tomo' command now accepts additional detectors.

* Tests

  - Instrument specific test scripts are now run during the test suite, in
    dry-run mode.

* Development

  - All modules now using several future imports for Python 3 compatibility.

  - Import order has been made consistent using 'isort'.


Release 3.4.0
-------------

* New client/server protocol(s)

  - The daemon communication layer has been made protocol independent. It is
    now possible to configure the transport layer and serializer to allow
    connections from clients which are not running in the Python world, without
    implementing the Python pickle protocol on the client side.

* Core

  - Added support for disabling devices.  The components here are a new
    'CanDisable' mixin, a new status 'DISABLED' to show disabled devices,
    and new GUI elements to disable/reenable the devices.

  - The compatibility of new setups will be checked *before* starting to
    unload/load anything, so the user will not get an empty device list in case
    of an error during loading a new setup.

  - Attached devices can now be allowed to not exist in the loaded
    configuration.

  - Userlimits are reinitialized when set to (0, 0).

  - 'Multi' methods (multiWait, multiStatus, ...) now raise the highest-
    severity exception. Repeated display of exceptions when waiting on a
    single device is avoided.

  - Runtime re-assignment of device methods is now forbidden.

  - Current script name is now returned in the daemon "getstatus" query.

* GUI

  - Implemented log-x scale for scan plotting.

  - Added an option to show/hide error bars in scan plots.
